Fix creator new button text-align

--- a/packages/components/src/newButton.scss
+++ b/packages/components/src/newButton.scss
@@ -119,4 +119,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
